--- a/main.scss
+++ b/main.scss
@@ -1,1 +1,69 @@
+$person-width: 200px;
 
+*{
+    box-sizing: border-box;
+}
+
+html{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+}
+
+body{
+    margin: 0;
+}
+
+.people{
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    column-gap: 30px;
+    row-gap: 40px;
+    justify-content: center;
+    align-items: center;
+
+    @media (min-width:1000px) {
+        grid-template-columns: repeat(4, 200px); 
+    }
+}
+
+.person{
+    height: 231px;
+
+    &__photo{
+        margin-bottom: 8px;
+    }
+    &__photo-img{
+        width: 200px;
+        border-radius: 200px;
+        position: relative;
+    }
+    &__photo-rank{
+        position: absolute;
+        top: (($person-width - 32px) / 2) ;
+        right: 10px;
+        width: 32px;
+        height: 32px;
+        border-radius: 200px;
+        background-color: #FFFFFF;
+        color: #8B0000;
+        font-size: 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__details{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__details-name{
+        font-size: 20px;
+        color: #2F4F4F;
+    }
+
+    &__details-extra{
+        display: none;
+    }
+}
