--- a/main.scss
+++ b/main.scss
@@ -48,7 +48,7 @@ body{
 
     &__photo-rank{
         position: absolute;
-        top: ((200px - 32px) / 2) ;
+        top: 100px;
         right: 10px;
         width: 32px;
         height: 32px;
